objects/Account.object
<CustomObject>
    <fields>
        <fullName>External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Used as the foreign key for external integration</description>
        <externalId>true</externalId>
        <label>Banner ID</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>hed__Current_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The current Address that the Account&apos;s billing fields are filled with.</description>
        <inlineHelpText>The current Address that the Account&apos;s billing fields are filled with.</inlineHelpText>
        <label>Current Address</label>
        <referenceTo>hed__Address__c</referenceTo>
        <relationshipLabel>Accounts (Current Address)</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hed__Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>_SYSTEM: One2OneContact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Account</relationshipLabel>
        <relationshipName>Organizations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sfal__CaseTeamTemplateName__c</fullName>
        <description>The name of the Predefined Case Team this Account corresponds to.</description>
        <externalId>true</externalId>
        <inlineHelpText>The name of the Predefined Case Team this Account corresponds to.</inlineHelpText>
        <label>Case Team Name</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <listViews>
        <fullName>Academic_Program</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Academic_Program</value>
        </filters>
        <label>Academic Program</label>
    </listViews>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>Business_Organization</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Business_Organization</value>
        </filters>
        <label>Business Organization</label>
    </listViews>
    <listViews>
        <fullName>Departments</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.University_Department</value>
        </filters>
        <label>Departments</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Sports_Organization</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Sports_Organization</value>
        </filters>
        <label>Sports Organization</label>
    </listViews>
    <recordTypes>
        <fullName>Academic_Program</fullName>
        <active>true</active>
        <description>An Academic Program offered at the University.</description>
        <label>Academic Program</label>
    </recordTypes>
    <recordTypes>
        <fullName>Administrative</fullName>
        <active>true</active>
        <description>An administrative account.</description>
        <label>Administrative</label>
    </recordTypes>
    <recordTypes>
        <fullName>Business_Organization</fullName>
        <active>true</active>
        <description>A business organization.</description>
        <label>Business Organization</label>
    </recordTypes>
    <recordTypes>
        <fullName>Educational_Institution</fullName>
        <active>true</active>
        <description>An educational institution.</description>
        <label>Educational Institution</label>
    </recordTypes>
    <recordTypes>
        <fullName>HH_Account</fullName>
        <active>true</active>
        <description>A Household containing one or more individuals.</description>
        <label>Household Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sports_Organization</fullName>
        <active>true</active>
        <description>A sports organization.</description>
        <label>Sports Organization</label>
    </recordTypes>
    <recordTypes>
        <fullName>Student_Attribute</fullName>
        <active>true</active>
        <description>Student Attributes as tracked in Banner</description>
        <label>Student Attribute</label>
    </recordTypes>
    <recordTypes>
        <fullName>University_Department</fullName>
        <active>true</active>
        <description>A department in the university.</description>
        <label>University Department</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>